@@ -38,6 +38,7 @@ var localized_strings,
 			options_hidetmsymbols: "Trademark and Copyright symbols in game titles",
 			options_hidedlcunownedgames: "DLC for games you do not own",
 			options_send_age_info: "Automatically send age verification when requested",
+			options_showspeechsearch: "Add speech input to search boxes",
 			options_contscroll: "Enable continuous scrolling of search results",
 			options_drm: "Show 3rd party DRM warnings",
 			options_lowestprice_header: "Price History Information",
